Rewrite resource constraint generation